# Miragea-Ss.github.io

./: .gitignore  CONTENT_GUIDE.md  DEPLOY.md  PINME_SETUP.md  README.md  WORKFLOW.md  astro.config.mjs  package-lock.json  package.json
.github/workflows/: agent-sync.yml  deploy.yml
agents/: CAMPAIGN_PLAYBOOK.md  README.md  campaign-action-queue.json  contests.yaml  ideas.yaml  production-log.yaml  publish-manifest.yaml
projects/eliora-media-vault/: .env.example  .gitignore  ACCEPTANCE_AND_HANDOFF.md  DEVPOST_SUBMISSION.md  DEVPOST_UPLOAD_PACKAGE.md  FINAL_AUDIT_2026-07-18.md  FINAL_DEMO_SCRIPT.md  LICENSE  PROJECT_BRIEF.md  README.md  SUBMISSION_CHECKLIST.md  pyproject.toml
projects/eliora-media-vault/src/eliora_media_vault/: __init__.py  cli.py  comfyui.py  export.py  pipeline.py  providers.py
projects/eliora-media-vault/tests/: test_pipeline.py
projects/eliora-media-vault/workflows/: eliora-krea2-provenance-chamber-api.json  eliora-krea2-recovery-beacon-api.json
public/: index.html  llms.txt  robots.txt
public/admin/: config.yml
public/eliora/: LOCAL.md  MVP_CHECKLIST.md  __index.html#  archive-mirror.html  eliora-comfy-bridge.py  index.html  infinite-canvas.html  open-local-canvas.bat  operator-canvas.html  perception.html  start-eliora-bridge.bat  start-eliora-work.bat
public/music/: .gitkeep
scripts/: adapt-workflow-hivram.mjs  agent-add.mjs  agent-schema.mjs  campaign-watch.mjs  export-agent-status.mjs  update_gallery.py  validate-agent-status.mjs  workflow-sources.json
src/agent/: .cursorrules  Import.JSON  (+6 more)
templates/: prediction-template.md
(+155 files in other folders)
